fixed bg-green class using the wrong background color

--- a/mod-picker/app/assets/stylesheets/components/gridItems.scss
+++ b/mod-picker/app/assets/stylesheets/components/gridItems.scss
@@ -177,7 +177,7 @@ grid-items {
 }
 
 .bg-green {
-  background-color: $yellow_color !important;
+  background-color: $green_color !important;
 }
 
 .bg-blue {
